--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5]\n",
+      "[0 1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "py_list = [0,1,2,3,4,5]\n",
+    "\n",
+    "array_from_list = np.array(py_list)\n",
+    "array_from_range = np.arange(6)\n",
+    "\n",
+    "print(array_from_list)\n",
+    "print(array_from_range)"
    ]
   },
   {
@@ -108,30 +119,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.651  1.7272 1.8542 1.905  1.9812]\n"
+     ]
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
-    "\n",
-    "#Your code here"
+    "array_height_meters = np.array(list_height_inches) * .0254\n",
+    "print(array_height_meters)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 68.03955366  63.50358342  99.79134537  92.98739    120.20321147]\n"
+     ]
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "array_weight_kg = np.array(list_weight_pounds)/2.2046\n",
+    "print(array_weight_kg)"
    ]
   },
   {
@@ -151,13 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.9613063  21.28692715 29.02550097 25.62324316 30.62382485]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "bmi_array = array_weight_kg/(array_height_meters**2)\n",
+    "print(bmi_array)"
    ]
   },
   {
@@ -169,13 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "ones = np.ones(5)"
    ]
   },
   {
@@ -187,13 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "bmi_array * ones"
    ]
   },
   {
@@ -221,6 +259,11 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
+    "np.zeros((n_rows,n_cols))\n",
+    "\n",
+    "for line in f.readlines():\n",
+    "    line.split('\\t')\n",
+    "f.split('\\t')\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
@@ -261,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
