--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,7 @@
     "\n",
     "np.zeros((n_rows,n_cols))\n",
     "\n",
-    "for line in f.readlines():\n",
+    "#for line in f.readlines():\n",
     "    line.split('\\t')\n",
     "f.split('\\t')\n",
     "#Your code here\n",
