--- a/index.ipynb
+++ b/index.ipynb
@@ -262,8 +262,8 @@
     "np.zeros((n_rows,n_cols))\n",
     "\n",
     "#for line in f.readlines():\n",
-    "    line.split('\\t')\n",
-    "f.split('\\t')\n",
+    "#    line.split('\\t')\n",
+    "#f.split('\\t')\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
