Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,9 @@
     "\n",
     "np.zeros((n_rows,n_cols))\n",
     "f.readlines()\n",
-    "#for line in f.readlines():\n",
-    "#    line.split('\\t')\n",
+    "\n",
+    "for line in f.readlines():\n",
+    "    line.split('\\t')\n",
     "#f.split('\\t')\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
