--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
     "\n",
     "np.zeros((n_rows,n_cols))\n",
     "f.readlines()\n",
-    "\n",
+    "data = []\n",
     "for line in f.readlines():\n",
     "    line.split('\\t')\n",
     "\n",
