Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
     "f.readlines()\n",
     "data = []\n",
     "for line in f.readlines():\n",
-    "    line.split('\\t')\n",
+    "    for x in line.split('\\t'):\n",
+    "        data.appen\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
