Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,6 +279,7 @@
     "f.readlines()\n",
     "data = []\n",
     "for line in f.readlines():\n",
+    "    words\n",
     "    for x in line.split('\\t'):\n",
     "        data.append(x)\n",
     "data\n",
