Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
     "data = []\n",
     "for line in f.readlines():\n",
     "    words = [line.split('\\t')]\n",
-    "    for x in line.split('\\t'):\n",
+    "    for x in words:\n",
     "        data.append(x)\n",
     "data\n",
     "\n",
