Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
     "    for x in words:\n",
     "        data.append(x)\n",
     "data\n",
-    "f\n",
+    "rows = f.readlin\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
