--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,10 +257,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "list"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     "        data.append(x)\n",
     "data\n",
     "rows = f.readlines()\n",
-    "type(rows\n",
+    "type(rows)\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
