--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
-    "np.zeros((n_rows,n_cols))\n",
+    "#np.zeros((n_rows,n_cols))\n",
     "f.readlines()\n",
     "data = []\n",
     "for line in f.readlines():\n",
