Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,12 +276,12 @@
     "f = open('bp.txt')\n",
     "\n",
     "#np.zeros((n_rows,n_cols))\n",
-    "f.readlines()\n",
-    "data = []\n",
-    "for line in f.readlines():\n",
-    "    words = [line.split('\\t')]\n",
-    "    for x in words:\n",
-    "        data.append(x)\n",
+    "#f.readlines()\n",
+    "#data = []\n",
+    "#for line in f.readlines():\n",
+    "#    words = [line.split('\\t')]\n",
+    "#    for x in words:\n",
+    "#        data.append(x)\n",
     "data\n",
     "rows = f.readlines()\n",
     "type(rows)\n",
