Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     "#        data.append(x)\n",
     "#data\n",
     "rows = f.readlines()\n",
-    "rows\n",
+    "rows[0].split(\\)\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
