--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,30 +257,10 @@
     {
      "data": {
       "text/plain": [
-       "['Pt\\tBP\\tAge\\tWeight\\tBSA\\tDur\\tPulse\\tStress\\n',\n",
-       " '1\\t105\\t47\\t85.4\\t1.75\\t5.1\\t63\\t33\\n',\n",
-       " '2\\t115\\t49\\t94.2\\t2.10\\t3.8\\t70\\t14\\n',\n",
-       " '3\\t116\\t49\\t95.3\\t1.98\\t8.2\\t72\\t10\\n',\n",
-       " '4\\t117\\t50\\t94.7\\t2.01\\t5.8\\t73\\t99\\n',\n",
-       " '5\\t112\\t51\\t89.4\\t1.89\\t7.0\\t72\\t95\\n',\n",
-       " '6\\t121\\t48\\t99.5\\t2.25\\t9.3\\t71\\t10\\n',\n",
-       " '7\\t121\\t49\\t99.8\\t2.25\\t2.5\\t69\\t42\\n',\n",
-       " '8\\t110\\t47\\t90.9\\t1.90\\t6.2\\t66\\t8\\n',\n",
-       " '9\\t110\\t49\\t89.2\\t1.83\\t7.1\\t69\\t62\\n',\n",
-       " '10\\t114\\t48\\t92.7\\t2.07\\t5.6\\t64\\t35\\n',\n",
-       " '11\\t114\\t47\\t94.4\\t2.07\\t5.3\\t74\\t90\\n',\n",
-       " '12\\t115\\t49\\t94.1\\t1.98\\t5.6\\t71\\t21\\n',\n",
-       " '13\\t114\\t50\\t91.6\\t2.05\\t10.2\\t68\\t47\\n',\n",
-       " '14\\t106\\t45\\t87.1\\t1.92\\t5.6\\t67\\t80\\n',\n",
-       " '15\\t125\\t52\\t101.3\\t2.19\\t10.0\\t76\\t98\\n',\n",
-       " '16\\t114\\t46\\t94.5\\t1.98\\t7.4\\t69\\t95\\n',\n",
-       " '17\\t106\\t46\\t87.0\\t1.87\\t3.6\\t62\\t18\\n',\n",
-       " '18\\t113\\t46\\t94.5\\t1.90\\t4.3\\t70\\t12\\n',\n",
-       " '19\\t110\\t48\\t90.5\\t1.88\\t9.0\\t71\\t99\\n',\n",
-       " '20\\t122\\t56\\t95.7\\t2.09\\t7.0\\t75\\t99\\n']"
+       "['Pt', 'BP', 'Age', 'Weight', 'BSA', 'Dur', 'Pulse', 'Stress\\n']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +284,7 @@
     "#        data.append(x)\n",
     "#data\n",
     "rows = f.readlines()\n",
-    "rows[0].split(\\)\n",
+    "rows[0].split('\\t')\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
