--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -257,10 +257,30 @@
     {
      "data": {
       "text/plain": [
-       "['Pt', 'BP', 'Age', 'Weight', 'BSA', 'Dur', 'Pulse', 'Stress\\n']"
+       "[['Pt', 'BP', 'Age', 'Weight', 'BSA', 'Dur', 'Pulse', 'Stress\\n'],\n",
+       " ['1', '105', '47', '85.4', '1.75', '5.1', '63', '33\\n'],\n",
+       " ['2', '115', '49', '94.2', '2.10', '3.8', '70', '14\\n'],\n",
+       " ['3', '116', '49', '95.3', '1.98', '8.2', '72', '10\\n'],\n",
+       " ['4', '117', '50', '94.7', '2.01', '5.8', '73', '99\\n'],\n",
+       " ['5', '112', '51', '89.4', '1.89', '7.0', '72', '95\\n'],\n",
+       " ['6', '121', '48', '99.5', '2.25', '9.3', '71', '10\\n'],\n",
+       " ['7', '121', '49', '99.8', '2.25', '2.5', '69', '42\\n'],\n",
+       " ['8', '110', '47', '90.9', '1.90', '6.2', '66', '8\\n'],\n",
+       " ['9', '110', '49', '89.2', '1.83', '7.1', '69', '62\\n'],\n",
+       " ['10', '114', '48', '92.7', '2.07', '5.6', '64', '35\\n'],\n",
+       " ['11', '114', '47', '94.4', '2.07', '5.3', '74', '90\\n'],\n",
+       " ['12', '115', '49', '94.1', '1.98', '5.6', '71', '21\\n'],\n",
+       " ['13', '114', '50', '91.6', '2.05', '10.2', '68', '47\\n'],\n",
+       " ['14', '106', '45', '87.1', '1.92', '5.6', '67', '80\\n'],\n",
+       " ['15', '125', '52', '101.3', '2.19', '10.0', '76', '98\\n'],\n",
+       " ['16', '114', '46', '94.5', '1.98', '7.4', '69', '95\\n'],\n",
+       " ['17', '106', '46', '87.0', '1.87', '3.6', '62', '18\\n'],\n",
+       " ['18', '113', '46', '94.5', '1.90', '4.3', '70', '12\\n'],\n",
+       " ['19', '110', '48', '90.5', '1.88', '9.0', '71', '99\\n'],\n",
+       " ['20', '122', '56', '95.7', '2.09', '7.0', '75', '99\\n']]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,12 +297,12 @@
     "\n",
     "#np.zeros((n_rows,n_cols))\n",
     "\n",
-    "#data = []\n",
-    "#for line in f.readlines():\n",
-    "#    words = [line.split('\\t')]\n",
-    "#    for x in words:\n",
-    "#        data.append(x)\n",
-    "#data\n",
+    "data = []\n",
+    "for line in f.readlines():\n",
+    "    words = [line.split('\\t')]\n",
+    "    for x in words:\n",
+    "        data.append(x)\n",
+    "data\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
