Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -257,30 +257,177 @@
     {
      "data": {
       "text/plain": [
-       "[['Pt', 'BP', 'Age', 'Weight', 'BSA', 'Dur', 'Pulse', 'Stress\\n'],\n",
-       " ['1', '105', '47', '85.4', '1.75', '5.1', '63', '33\\n'],\n",
-       " ['2', '115', '49', '94.2', '2.10', '3.8', '70', '14\\n'],\n",
-       " ['3', '116', '49', '95.3', '1.98', '8.2', '72', '10\\n'],\n",
-       " ['4', '117', '50', '94.7', '2.01', '5.8', '73', '99\\n'],\n",
-       " ['5', '112', '51', '89.4', '1.89', '7.0', '72', '95\\n'],\n",
-       " ['6', '121', '48', '99.5', '2.25', '9.3', '71', '10\\n'],\n",
-       " ['7', '121', '49', '99.8', '2.25', '2.5', '69', '42\\n'],\n",
-       " ['8', '110', '47', '90.9', '1.90', '6.2', '66', '8\\n'],\n",
-       " ['9', '110', '49', '89.2', '1.83', '7.1', '69', '62\\n'],\n",
-       " ['10', '114', '48', '92.7', '2.07', '5.6', '64', '35\\n'],\n",
-       " ['11', '114', '47', '94.4', '2.07', '5.3', '74', '90\\n'],\n",
-       " ['12', '115', '49', '94.1', '1.98', '5.6', '71', '21\\n'],\n",
-       " ['13', '114', '50', '91.6', '2.05', '10.2', '68', '47\\n'],\n",
-       " ['14', '106', '45', '87.1', '1.92', '5.6', '67', '80\\n'],\n",
-       " ['15', '125', '52', '101.3', '2.19', '10.0', '76', '98\\n'],\n",
-       " ['16', '114', '46', '94.5', '1.98', '7.4', '69', '95\\n'],\n",
-       " ['17', '106', '46', '87.0', '1.87', '3.6', '62', '18\\n'],\n",
-       " ['18', '113', '46', '94.5', '1.90', '4.3', '70', '12\\n'],\n",
-       " ['19', '110', '48', '90.5', '1.88', '9.0', '71', '99\\n'],\n",
-       " ['20', '122', '56', '95.7', '2.09', '7.0', '75', '99\\n']]"
+       "['Pt',\n",
+       " 'BP',\n",
+       " 'Age',\n",
+       " 'Weight',\n",
+       " 'BSA',\n",
+       " 'Dur',\n",
+       " 'Pulse',\n",
+       " 'Stress\\n',\n",
+       " '1',\n",
+       " '105',\n",
+       " '47',\n",
+       " '85.4',\n",
+       " '1.75',\n",
+       " '5.1',\n",
+       " '63',\n",
+       " '33\\n',\n",
+       " '2',\n",
+       " '115',\n",
+       " '49',\n",
+       " '94.2',\n",
+       " '2.10',\n",
+       " '3.8',\n",
+       " '70',\n",
+       " '14\\n',\n",
+       " '3',\n",
+       " '116',\n",
+       " '49',\n",
+       " '95.3',\n",
+       " '1.98',\n",
+       " '8.2',\n",
+       " '72',\n",
+       " '10\\n',\n",
+       " '4',\n",
+       " '117',\n",
+       " '50',\n",
+       " '94.7',\n",
+       " '2.01',\n",
+       " '5.8',\n",
+       " '73',\n",
+       " '99\\n',\n",
+       " '5',\n",
+       " '112',\n",
+       " '51',\n",
+       " '89.4',\n",
+       " '1.89',\n",
+       " '7.0',\n",
+       " '72',\n",
+       " '95\\n',\n",
+       " '6',\n",
+       " '121',\n",
+       " '48',\n",
+       " '99.5',\n",
+       " '2.25',\n",
+       " '9.3',\n",
+       " '71',\n",
+       " '10\\n',\n",
+       " '7',\n",
+       " '121',\n",
+       " '49',\n",
+       " '99.8',\n",
+       " '2.25',\n",
+       " '2.5',\n",
+       " '69',\n",
+       " '42\\n',\n",
+       " '8',\n",
+       " '110',\n",
+       " '47',\n",
+       " '90.9',\n",
+       " '1.90',\n",
+       " '6.2',\n",
+       " '66',\n",
+       " '8\\n',\n",
+       " '9',\n",
+       " '110',\n",
+       " '49',\n",
+       " '89.2',\n",
+       " '1.83',\n",
+       " '7.1',\n",
+       " '69',\n",
+       " '62\\n',\n",
+       " '10',\n",
+       " '114',\n",
+       " '48',\n",
+       " '92.7',\n",
+       " '2.07',\n",
+       " '5.6',\n",
+       " '64',\n",
+       " '35\\n',\n",
+       " '11',\n",
+       " '114',\n",
+       " '47',\n",
+       " '94.4',\n",
+       " '2.07',\n",
+       " '5.3',\n",
+       " '74',\n",
+       " '90\\n',\n",
+       " '12',\n",
+       " '115',\n",
+       " '49',\n",
+       " '94.1',\n",
+       " '1.98',\n",
+       " '5.6',\n",
+       " '71',\n",
+       " '21\\n',\n",
+       " '13',\n",
+       " '114',\n",
+       " '50',\n",
+       " '91.6',\n",
+       " '2.05',\n",
+       " '10.2',\n",
+       " '68',\n",
+       " '47\\n',\n",
+       " '14',\n",
+       " '106',\n",
+       " '45',\n",
+       " '87.1',\n",
+       " '1.92',\n",
+       " '5.6',\n",
+       " '67',\n",
+       " '80\\n',\n",
+       " '15',\n",
+       " '125',\n",
+       " '52',\n",
+       " '101.3',\n",
+       " '2.19',\n",
+       " '10.0',\n",
+       " '76',\n",
+       " '98\\n',\n",
+       " '16',\n",
+       " '114',\n",
+       " '46',\n",
+       " '94.5',\n",
+       " '1.98',\n",
+       " '7.4',\n",
+       " '69',\n",
+       " '95\\n',\n",
+       " '17',\n",
+       " '106',\n",
+       " '46',\n",
+       " '87.0',\n",
+       " '1.87',\n",
+       " '3.6',\n",
+       " '62',\n",
+       " '18\\n',\n",
+       " '18',\n",
+       " '113',\n",
+       " '46',\n",
+       " '94.5',\n",
+       " '1.90',\n",
+       " '4.3',\n",
+       " '70',\n",
+       " '12\\n',\n",
+       " '19',\n",
+       " '110',\n",
+       " '48',\n",
+       " '90.5',\n",
+       " '1.88',\n",
+       " '9.0',\n",
+       " '71',\n",
+       " '99\\n',\n",
+       " '20',\n",
+       " '122',\n",
+       " '56',\n",
+       " '95.7',\n",
+       " '2.09',\n",
+       " '7.0',\n",
+       " '75',\n",
+       " '99\\n']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +446,7 @@
     "\n",
     "data = []\n",
     "for line in f.readlines():\n",
-    "    words = [line.split('\\t')]\n",
+    "    words = line.split('\\t')\n",
     "    for x in words:\n",
     "        data.append(x)\n",
     "data\n",
