--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,7 @@
     "    words = line.split('\\t')\n",
     "    for x in words:\n",
     "        data.append(x)\n",
-    "\n",
+    "index_list = list(np.nd)\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
