--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
-    "#np.zeros((n_rows,n_cols))\n",
+    "final = np.zeros((n_rows,n_cols))\n",
     "\n",
     "data = []\n",
     "for line in f.readlines():\n",
