--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,177 +257,177 @@
     {
      "data": {
       "text/plain": [
-       "['Pt',\n",
-       " 'BP',\n",
-       " 'Age',\n",
-       " 'Weight',\n",
-       " 'BSA',\n",
-       " 'Dur',\n",
-       " 'Pulse',\n",
-       " 'Stress\\n',\n",
-       " '1',\n",
-       " '105',\n",
-       " '47',\n",
-       " '85.4',\n",
-       " '1.75',\n",
-       " '5.1',\n",
-       " '63',\n",
-       " '33\\n',\n",
-       " '2',\n",
-       " '115',\n",
-       " '49',\n",
-       " '94.2',\n",
-       " '2.10',\n",
-       " '3.8',\n",
-       " '70',\n",
-       " '14\\n',\n",
-       " '3',\n",
-       " '116',\n",
-       " '49',\n",
-       " '95.3',\n",
-       " '1.98',\n",
-       " '8.2',\n",
-       " '72',\n",
-       " '10\\n',\n",
-       " '4',\n",
-       " '117',\n",
-       " '50',\n",
-       " '94.7',\n",
-       " '2.01',\n",
-       " '5.8',\n",
-       " '73',\n",
-       " '99\\n',\n",
-       " '5',\n",
-       " '112',\n",
-       " '51',\n",
-       " '89.4',\n",
-       " '1.89',\n",
-       " '7.0',\n",
-       " '72',\n",
-       " '95\\n',\n",
-       " '6',\n",
-       " '121',\n",
-       " '48',\n",
-       " '99.5',\n",
-       " '2.25',\n",
-       " '9.3',\n",
-       " '71',\n",
-       " '10\\n',\n",
-       " '7',\n",
-       " '121',\n",
-       " '49',\n",
-       " '99.8',\n",
-       " '2.25',\n",
-       " '2.5',\n",
-       " '69',\n",
-       " '42\\n',\n",
-       " '8',\n",
-       " '110',\n",
-       " '47',\n",
-       " '90.9',\n",
-       " '1.90',\n",
-       " '6.2',\n",
-       " '66',\n",
-       " '8\\n',\n",
-       " '9',\n",
-       " '110',\n",
-       " '49',\n",
-       " '89.2',\n",
-       " '1.83',\n",
-       " '7.1',\n",
-       " '69',\n",
-       " '62\\n',\n",
-       " '10',\n",
-       " '114',\n",
-       " '48',\n",
-       " '92.7',\n",
-       " '2.07',\n",
-       " '5.6',\n",
-       " '64',\n",
-       " '35\\n',\n",
-       " '11',\n",
-       " '114',\n",
-       " '47',\n",
-       " '94.4',\n",
-       " '2.07',\n",
-       " '5.3',\n",
-       " '74',\n",
-       " '90\\n',\n",
-       " '12',\n",
-       " '115',\n",
-       " '49',\n",
-       " '94.1',\n",
-       " '1.98',\n",
-       " '5.6',\n",
-       " '71',\n",
-       " '21\\n',\n",
-       " '13',\n",
-       " '114',\n",
-       " '50',\n",
-       " '91.6',\n",
-       " '2.05',\n",
-       " '10.2',\n",
-       " '68',\n",
-       " '47\\n',\n",
-       " '14',\n",
-       " '106',\n",
-       " '45',\n",
-       " '87.1',\n",
-       " '1.92',\n",
-       " '5.6',\n",
-       " '67',\n",
-       " '80\\n',\n",
-       " '15',\n",
-       " '125',\n",
-       " '52',\n",
-       " '101.3',\n",
-       " '2.19',\n",
-       " '10.0',\n",
-       " '76',\n",
-       " '98\\n',\n",
-       " '16',\n",
-       " '114',\n",
-       " '46',\n",
-       " '94.5',\n",
-       " '1.98',\n",
-       " '7.4',\n",
-       " '69',\n",
-       " '95\\n',\n",
-       " '17',\n",
-       " '106',\n",
-       " '46',\n",
-       " '87.0',\n",
-       " '1.87',\n",
-       " '3.6',\n",
-       " '62',\n",
-       " '18\\n',\n",
-       " '18',\n",
-       " '113',\n",
-       " '46',\n",
-       " '94.5',\n",
-       " '1.90',\n",
-       " '4.3',\n",
-       " '70',\n",
-       " '12\\n',\n",
-       " '19',\n",
-       " '110',\n",
-       " '48',\n",
-       " '90.5',\n",
-       " '1.88',\n",
-       " '9.0',\n",
-       " '71',\n",
-       " '99\\n',\n",
-       " '20',\n",
-       " '122',\n",
-       " '56',\n",
-       " '95.7',\n",
-       " '2.09',\n",
-       " '7.0',\n",
-       " '75',\n",
-       " '99\\n']"
+       "[((0, 0), 0.0),\n",
+       " ((0, 1), 0.0),\n",
+       " ((0, 2), 0.0),\n",
+       " ((0, 3), 0.0),\n",
+       " ((0, 4), 0.0),\n",
+       " ((0, 5), 0.0),\n",
+       " ((0, 6), 0.0),\n",
+       " ((0, 7), 0.0),\n",
+       " ((1, 0), 0.0),\n",
+       " ((1, 1), 0.0),\n",
+       " ((1, 2), 0.0),\n",
+       " ((1, 3), 0.0),\n",
+       " ((1, 4), 0.0),\n",
+       " ((1, 5), 0.0),\n",
+       " ((1, 6), 0.0),\n",
+       " ((1, 7), 0.0),\n",
+       " ((2, 0), 0.0),\n",
+       " ((2, 1), 0.0),\n",
+       " ((2, 2), 0.0),\n",
+       " ((2, 3), 0.0),\n",
+       " ((2, 4), 0.0),\n",
+       " ((2, 5), 0.0),\n",
+       " ((2, 6), 0.0),\n",
+       " ((2, 7), 0.0),\n",
+       " ((3, 0), 0.0),\n",
+       " ((3, 1), 0.0),\n",
+       " ((3, 2), 0.0),\n",
+       " ((3, 3), 0.0),\n",
+       " ((3, 4), 0.0),\n",
+       " ((3, 5), 0.0),\n",
+       " ((3, 6), 0.0),\n",
+       " ((3, 7), 0.0),\n",
+       " ((4, 0), 0.0),\n",
+       " ((4, 1), 0.0),\n",
+       " ((4, 2), 0.0),\n",
+       " ((4, 3), 0.0),\n",
+       " ((4, 4), 0.0),\n",
+       " ((4, 5), 0.0),\n",
+       " ((4, 6), 0.0),\n",
+       " ((4, 7), 0.0),\n",
+       " ((5, 0), 0.0),\n",
+       " ((5, 1), 0.0),\n",
+       " ((5, 2), 0.0),\n",
+       " ((5, 3), 0.0),\n",
+       " ((5, 4), 0.0),\n",
+       " ((5, 5), 0.0),\n",
+       " ((5, 6), 0.0),\n",
+       " ((5, 7), 0.0),\n",
+       " ((6, 0), 0.0),\n",
+       " ((6, 1), 0.0),\n",
+       " ((6, 2), 0.0),\n",
+       " ((6, 3), 0.0),\n",
+       " ((6, 4), 0.0),\n",
+       " ((6, 5), 0.0),\n",
+       " ((6, 6), 0.0),\n",
+       " ((6, 7), 0.0),\n",
+       " ((7, 0), 0.0),\n",
+       " ((7, 1), 0.0),\n",
+       " ((7, 2), 0.0),\n",
+       " ((7, 3), 0.0),\n",
+       " ((7, 4), 0.0),\n",
+       " ((7, 5), 0.0),\n",
+       " ((7, 6), 0.0),\n",
+       " ((7, 7), 0.0),\n",
+       " ((8, 0), 0.0),\n",
+       " ((8, 1), 0.0),\n",
+       " ((8, 2), 0.0),\n",
+       " ((8, 3), 0.0),\n",
+       " ((8, 4), 0.0),\n",
+       " ((8, 5), 0.0),\n",
+       " ((8, 6), 0.0),\n",
+       " ((8, 7), 0.0),\n",
+       " ((9, 0), 0.0),\n",
+       " ((9, 1), 0.0),\n",
+       " ((9, 2), 0.0),\n",
+       " ((9, 3), 0.0),\n",
+       " ((9, 4), 0.0),\n",
+       " ((9, 5), 0.0),\n",
+       " ((9, 6), 0.0),\n",
+       " ((9, 7), 0.0),\n",
+       " ((10, 0), 0.0),\n",
+       " ((10, 1), 0.0),\n",
+       " ((10, 2), 0.0),\n",
+       " ((10, 3), 0.0),\n",
+       " ((10, 4), 0.0),\n",
+       " ((10, 5), 0.0),\n",
+       " ((10, 6), 0.0),\n",
+       " ((10, 7), 0.0),\n",
+       " ((11, 0), 0.0),\n",
+       " ((11, 1), 0.0),\n",
+       " ((11, 2), 0.0),\n",
+       " ((11, 3), 0.0),\n",
+       " ((11, 4), 0.0),\n",
+       " ((11, 5), 0.0),\n",
+       " ((11, 6), 0.0),\n",
+       " ((11, 7), 0.0),\n",
+       " ((12, 0), 0.0),\n",
+       " ((12, 1), 0.0),\n",
+       " ((12, 2), 0.0),\n",
+       " ((12, 3), 0.0),\n",
+       " ((12, 4), 0.0),\n",
+       " ((12, 5), 0.0),\n",
+       " ((12, 6), 0.0),\n",
+       " ((12, 7), 0.0),\n",
+       " ((13, 0), 0.0),\n",
+       " ((13, 1), 0.0),\n",
+       " ((13, 2), 0.0),\n",
+       " ((13, 3), 0.0),\n",
+       " ((13, 4), 0.0),\n",
+       " ((13, 5), 0.0),\n",
+       " ((13, 6), 0.0),\n",
+       " ((13, 7), 0.0),\n",
+       " ((14, 0), 0.0),\n",
+       " ((14, 1), 0.0),\n",
+       " ((14, 2), 0.0),\n",
+       " ((14, 3), 0.0),\n",
+       " ((14, 4), 0.0),\n",
+       " ((14, 5), 0.0),\n",
+       " ((14, 6), 0.0),\n",
+       " ((14, 7), 0.0),\n",
+       " ((15, 0), 0.0),\n",
+       " ((15, 1), 0.0),\n",
+       " ((15, 2), 0.0),\n",
+       " ((15, 3), 0.0),\n",
+       " ((15, 4), 0.0),\n",
+       " ((15, 5), 0.0),\n",
+       " ((15, 6), 0.0),\n",
+       " ((15, 7), 0.0),\n",
+       " ((16, 0), 0.0),\n",
+       " ((16, 1), 0.0),\n",
+       " ((16, 2), 0.0),\n",
+       " ((16, 3), 0.0),\n",
+       " ((16, 4), 0.0),\n",
+       " ((16, 5), 0.0),\n",
+       " ((16, 6), 0.0),\n",
+       " ((16, 7), 0.0),\n",
+       " ((17, 0), 0.0),\n",
+       " ((17, 1), 0.0),\n",
+       " ((17, 2), 0.0),\n",
+       " ((17, 3), 0.0),\n",
+       " ((17, 4), 0.0),\n",
+       " ((17, 5), 0.0),\n",
+       " ((17, 6), 0.0),\n",
+       " ((17, 7), 0.0),\n",
+       " ((18, 0), 0.0),\n",
+       " ((18, 1), 0.0),\n",
+       " ((18, 2), 0.0),\n",
+       " ((18, 3), 0.0),\n",
+       " ((18, 4), 0.0),\n",
+       " ((18, 5), 0.0),\n",
+       " ((18, 6), 0.0),\n",
+       " ((18, 7), 0.0),\n",
+       " ((19, 0), 0.0),\n",
+       " ((19, 1), 0.0),\n",
+       " ((19, 2), 0.0),\n",
+       " ((19, 3), 0.0),\n",
+       " ((19, 4), 0.0),\n",
+       " ((19, 5), 0.0),\n",
+       " ((19, 6), 0.0),\n",
+       " ((19, 7), 0.0),\n",
+       " ((20, 0), 0.0),\n",
+       " ((20, 1), 0.0),\n",
+       " ((20, 2), 0.0),\n",
+       " ((20, 3), 0.0),\n",
+       " ((20, 4), 0.0),\n",
+       " ((20, 5), 0.0),\n",
+       " ((20, 6), 0.0),\n",
+       " ((20, 7), 0.0)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,8 +449,8 @@
     "    words = line.split('\\t')\n",
     "    for x in words:\n",
     "        data.append(x)\n",
-    "index_list = list(np.ndenumerate())\n",
-    "\n",
+    "index_list = list(np.ndenumerate(final))\n",
+    "index_list\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
