Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
     "    for x in words:\n",
     "        data.append(x)\n",
     "index_list = list(np.ndenumerate(final))\n",
-    "\n",
+    "index_list[]\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
