Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,8 @@
     "    for x in words:\n",
     "        data.append(x)\n",
     "index_list = list(np.ndenumerate(final))\n",
-    "for n in range\n",
+    "for n in range(0,len(data)):\n",
+    "    \n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
