Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
     "        data.append(x)\n",
     "index_list = list(np.ndenumerate(final))\n",
     "for n in range(0,len(data)):\n",
-    "    \n",
+    "    final[index]\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
