--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
     "        data.append(x)\n",
     "index_list = list(np.ndenumerate(final))\n",
     "for n in range(0,len(data)):\n",
-    "    final[index_list[n][0][0]][index_list[n][0][1]]\n",
+    "    final[index_list[n][0][0]][index_list[n][0][1]] = data[n]\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
