Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -279,7 +279,7 @@
     "final = np.zeros((n_rows,n_cols))\n",
     "\n",
     "data = []\n",
-    "for line in f.readlines()[1:]:\n",
+    "for line in f.readlines():\n",
     "    words = line.split('\\t')\n",
     "    for x in words:\n",
     "        data.append(x)\n",
