Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,9 @@
     "index_list = list(np.ndenumerate(final))\n",
     "for n in range(0,len(data)):\n",
     "    final[index_list[n][0][0]][index_list[n][0][1]] = data[n]\n",
-    "final\n",
+    "print(final)\n",
+    "\n",
+    "\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
