Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,8 @@
     "    final[index_list[n][0][0]][index_list[n][0][1]] = data[n]\n",
     "print(final)\n",
     "\n",
-    "f = open('bp.txt)\n",
+    "f = open('bp.txt')\n",
+    "print\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
